[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "webdown"
version = "0.2.0"
description = "Convert web pages to markdown"
authors = ["Travis Cole <your-email@example.com>"]
readme = "README.md"
repository = "https://github.com/kelp/webdown"
homepage = "https://github.com/kelp/webdown"
documentation = "https://github.com/kelp/webdown/tree/main/docs/api"
keywords = ["web", "markdown", "html", "converter"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "webdown"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.25.0"
html2text = ">=2020.1.16"
beautifulsoup4 = ">=4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
black = ">=24.0.0"
flake8 = ">=7.0.0"
mypy = ">=1.8.0"
requests-mock = ">=1.12.0"
pre-commit = "^4.1.0"
types-requests = "^2.32.0"
isort = ">=5.13.0"

[tool.poetry.scripts]
webdown = "webdown.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (select with '--integration')",
]
pythonpath = [
    "."
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.mypy.overrides]
module = [
    "html2text.*",
    "pytest.*",
    "requests_mock.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]
