[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webdown"
version = "0.8.2"
description = "Convert web pages and HTML files to markdown and Claude XML formats"
authors = [{name = "Travis Cole", email = "kelp@plek.org"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
keywords = ["web", "markdown", "html", "converter", "html-to-markdown", "claude-xml", "web-scraping", "content-extraction", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.3,<3",
    "html2text>=2024.2.26,<2025",
    "beautifulsoup4>=4.13.3,<5",
    "tqdm>=4.67.1,<5",
]

[project.scripts]
webdown = "webdown.cli:main"

[project.urls]
Homepage = "https://tcole.net/webdown"
Repository = "https://github.com/kelp/webdown"
Documentation = "https://tcole.net/webdown/"
"Bug Tracker" = "https://github.com/kelp/webdown/issues"
"Source Code" = "https://github.com/kelp/webdown"
Changelog = "https://github.com/kelp/webdown/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.0.0,<7",
    "black>=26.3.1,<27",
    "flake8>=7.1.2,<8",
    "mypy>=1.15.0,<2",
    "requests-mock>=1.12.1,<2",
    "pre-commit>=4.1.0,<5",
    "types-requests>=2.32.0.20250306",
    "isort>=6.0.1,<7",
    "types-tqdm>=4.67.0.20250301",
    "pdoc>=15.0.1,<16",
    "mkdocs>=1.6.1,<2",
    "mkdocstrings>=0.29,<0.31",
    "mkdocstrings-python>=1.16.5,<2",
    "mkdocs-material>=9.6.8,<10",
    "safety==3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["webdown"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (select with '--integration')",
]
pythonpath = [
    "."
]

[tool.coverage.run]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.mypy.overrides]
module = [
    "html2text.*",
    "pytest.*",
    "requests_mock.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]
